实现能自动跳转

--- a/.babelrc
+++ b/.babelrc
@@ -13,5 +13,9 @@
       "libraryName": "mint-ui",
       "style": true
     }
-  ]]]
+  ]],"transform-remove-strict-mode"],
+  "ignore": [
+    './src/lib/mui/js'
+  ]
+
 }
