--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "lazy-vue": "^1.0.2",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mint-ui": "^2.2.13",
